[metadata]
name = py-sls-lambda-toolkit
version = 0.1.1
author = Julio Flores
author_email = juliocesarflores12@gmail.com
author_url = juliofloresdev.com
description = A toolkit for serverless and AWS, with a focus on AWS Lambda and dynamodb.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0riion/py-sls-lambda-toolkit
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    aws
    serverless
    lambda
    dynamodb
    toolkit

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    boto3==1.26.118
    jsonschema==4.17.3
    camel-converter==3.0.0
include_package_data = True
